--- a/_posts/2018-09-30-dinalin.markdown
+++ b/_posts/2018-09-30-dinalin.markdown
@@ -40,7 +40,7 @@ I was making this for my wife Dina so decided to call it a Dinalin.
 
 I enjoy taking it with me if I am going to have to wait somewhere. Lots of people are intrigued and stop and ask me what it is. I tell them that I made it up and it's sort of a hybrid between a guitar, mandolin, and dulcimer. Some accept that description but a large minority respond, "Yes, but what is it?". I then tell them it's a Dinalin. A number of these folks seem mildly disturbed because it's not an instrument they have heard of. I remind them that it makes sense that they have never heard of a Dinalin since the one in front of them is the only one that exists and I made it up. Only some of them seem satisfied with this explanation.
 
-If people look interested I ask them if they want to play it. I'm able to convince about half the people who start off saying, "Oh no, I don't know how to play that." to try it. I explain that since it has an open tuning they can just strum it without fretting. The next simple thing to try is to strum it while fretting the high F#4 string. If they play a note that sounds bad just go up or down one fret and it will all be OK again.
+If people look interested I ask them if they want to play it. I'm able to convince about half the people who start off saying, "Oh no, I don't know how to play that." to try it. I explain that since it has an open tuning they can just strum it without fretting. The next simple thing to try is to strum it while fretting the high F#4 string in different positions. If they play a note that sounds bad just go up or down one fret and it will all be OK again.
 
 ### Here's what it sounds like now when I'm not completely awake.
 
